# sethrak

./: .gitignore  .isort.cfg  .style.yapf  README.md  breeze_resources.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
sethrak/: __main__.py  app.py  utils.py
sethrak/gui/: main_window.py  table_widget.py  task_tabs.py
tasks/: __init__.py  build.py
