[tool.poetry]
name = "sethrak"
version = "0.1.0"
description = "PyQt GUI for TaskWarrior"
authors = ["Ivan Gonzalez Ibarra <ivan.gonzalez@liveviewtech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.2"
taskw = "^1.3.0"
autoflake = "^1.4"
qdarkstyle = "^2.8.1"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
